Alteração da Cor do Background alterado

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" href="assets/images/ToDoList.jpg" type="image/x-icon">
-    <title>TODO List App</title>
+    <title>My TODO List App</title>
 </head>
 
 <body>
     <div class="app">
-        <div class="todo-list">
+        <div class="todo">
             <h1 class="title">
                 My TODO List App
             </h1>
