--- a/login.html
+++ b/login.html
@@ -10,7 +10,24 @@
 </head>
 
 <body>
+    <div id="login-box">
+        <div class="left">
+            <h1>Login</h1>
 
+            <input type="text" name="email" placeholder="E-mail" />
+            <input type="password" name="password" placeholder="Password" />
+
+            <input type="submit" name="signup_submit" value="Log me in" />
+        </div>
+
+        <div class="right">
+            <span class="loginwith"></span>
+            <button class="social-signin facebook">Log in with facebook</button>
+            <button class="social-signin twitter">Log in with Instagram</button>
+            <button class="social-signin google">Log in with Google</button>
+        </div>
+        <div class="or">OR</div>
+    </div>
 </body>
 
 </html>
