Tela do sign up terminada

--- a/sign-up.html
+++ b/sign-up.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="login-box">
+    <div id="sign-up-box">
         <div class="left">
             <h1>Sign up</h1>
 
@@ -23,11 +23,11 @@
         </div>
 
         <div class="right">
-            <span class="loginwith">Sign in with<br />social network</span>
+            <span class="loginwith"></span>
 
-            <button class="social-signin facebook">Log in with facebook</button>
-            <button class="social-signin twitter">Log in with Instagram</button>
-            <button class="social-signin google">Log in with Google</button>
+            <button class="social-signin facebook">Sign up with facebook</button>
+            <button class="social-signin twitter">Sign up with Instagram</button>
+            <button class="social-signin google">Sign up with Google</button>
         </div>
         <div class="or">OR</div>
     </div>
