--- a/sign-up.html
+++ b/sign-up.html
@@ -12,7 +12,7 @@
 <body>
     <div id="sign-up-box">
         <div class="left">
-            <h1>Sign up</h1>
+            <h1>Sign</h1>
 
             <input type="text" name="username" placeholder="Username" />
             <input type="text" name="email" placeholder="E-mail" />
@@ -25,9 +25,9 @@
         <div class="right">
             <span class="loginwith"></span>
 
-            <button class="social-signin facebook">Sign up with facebook</button>
-            <button class="social-signin twitter">Sign up with Instagram</button>
-            <button class="social-signin google">Sign up with Google</button>
+            <button class="social-signup facebook">Sign up with facebook</button>
+            <button class="social-signup twitter">Sign up with Instagram</button>
+            <button class="social-signup google">Sign up with Google</button>
         </div>
         <div class="or">OR</div>
     </div>
