--- a/sign-up.html
+++ b/sign-up.html
@@ -12,7 +12,7 @@
 <body>
     <div id="sign-up-box">
         <div class="left">
-            <h1>Sign</h1>
+            <h1>Sign Up</h1>
 
             <input type="text" name="username" placeholder="Username" />
             <input type="text" name="email" placeholder="E-mail" />
