Alterado o campo da classe or

--- a/sign-up.html
+++ b/sign-up.html
@@ -29,7 +29,7 @@
             <button class="social-signup twitter">Sign up with Instagram</button>
             <button class="social-signup google">Sign up with Google</button>
         </div>
-        <div class="or">OR</div>
+        <div class="or">Or</div>
     </div>
 </body>
 
