Todo o index foi apagado, para ser reconstituído

--- a/index.html
+++ b/index.html
@@ -3,33 +3,33 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="assets/images/ToDoList.jpg" type="image/x-icon">
+
+    <!-- CSS do Bootstrap 4-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- CSS do Bootstrap 4-->
+
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>My TODO List App</title>
 </head>
 
 <body>
     <div class="app">
-        <div class="todo">
-            <h1 class="title">
-                My TODO List App
-            </h1>
+        <h1 class="jumbotron">
+            My TODO List App
+        </h1>
+    </div>
 
-            <form class="form" action="">
-                <input class="form-input" type="text" data-form-input>
-                <button class="form-button" data-form-button> Novo Item </button>
-            </form>
+    <!-- Scripts do Bootstrap 4-->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- Scripts do Bootstrap 4-->
 
-            <ul class="list" data-list>
-                <li class="task" data-task>
-                    <p class="content">
-                        Adicionar a primeira tarefa na lista
-                    </p>
-                </li>
-            </ul>
-        </div>
-        <script type="module" src="assets/script/script.js"></script>
+    <script type="module" src="assets/script/script.js"></script>
+
 </body>
 
 </html>
