Nova forma de logar no sistema

--- a/login.html
+++ b/login.html
@@ -28,9 +28,9 @@
 
         <div class="right">
             <span class="loginwith"></span>
-            <button class="social-signin facebook">Log in with facebook</button>
-            <button class="social-signin twitter">Log in with Instagram</button>
-            <button class="social-signin google">Log in with Google</button>
+            <button class="social-signin facebook">facebook</button>
+            <button class="social-signin twitter">Instagram</button>
+            <button class="social-signin google">Google</button>
         </div>
         <div class="or">OR</div>
     </div>
