Uma nova forma de criar conta no sistema

--- a/sign-up.html
+++ b/sign-up.html
@@ -31,9 +31,9 @@
         <div class="right">
             <span class="loginwith"></span>
 
-            <button class="social-signup facebook">Sign up with facebook</button>
-            <button class="social-signup twitter">Sign up with Instagram</button>
-            <button class="social-signup google">Sign up with Google</button>
+            <button class="social-signup facebook">facebook</button>
+            <button class="social-signup twitter">Instagram</button>
+            <button class="social-signup google">Google</button>
         </div>
         <div class="or">Or</div>
     </div>
