Alterado o título da Aplicação

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- CSS do Bootstrap 4-->
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>My TODO List App</title>
+    <title>TODO List App</title>
 </head>
 
 <body>
