Editado o botão de sign up

--- a/sign-up.html
+++ b/sign-up.html
@@ -25,7 +25,7 @@
             <input type="password" name="password" placeholder="Password" />
             <input type="password" name="password2" placeholder="Retype your password" />
 
-            <input type="submit" name="signup_submit" value="Sign-up" />
+            <input type="submit" name="signup_submit" value="Sign up" />
         </div>
 
         <div class="right">
